--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -95,6 +95,7 @@
 
 
                         <TextView
+                            android:id="@+id/next_image"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
@@ -103,6 +104,7 @@
                             android:background="@drawable/images_arrow" />
 
                         <TextView
+                            android:id="@+id/previous_image"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
@@ -110,6 +112,11 @@
                             android:layout_marginStart="10dp"
                             android:background="@drawable/images_arrow"
                             android:rotation="180" />
+
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/image_slider"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
 
                         <ImageView
                             android:id="@+id/userProfileImage"
