Fix need to update crash issue

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -656,6 +656,8 @@
         android:label="AdditionalImagesFragment" >
         <argument
             android:name="additionalImages"
-            app:argType="string[]" />
+            app:argType="string[]"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 </navigation>
